--- a/styles/style.css
+++ b/styles/style.css
@@ -31,10 +31,10 @@ body {
 
  h1 {
     width: 100vw;
-    padding: 12px;
+    padding: 20px;
     background-color: var(--cor05);
     font-family: "Marck Script", cursive;
-    font-size: 2.4em;
+    font-size: 2.6em;
     text-align: center;
     color: var(--cor02);
 }
@@ -50,11 +50,14 @@ main {
 
 main h2 {
     font-family: "Sacramento", cursive;
-    font-size: 2.6em;
+    font-size: 2.8em;
 }
 
 main p {
-    margin-bottom: 10px;
+    margin-bottom: 12px;
+    text-indent: 7px;
+    font-size: 1.1em;
+    line-height: 1.7em;
 }
 
 section.video {
